<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button android:id="@+id/btn_normal" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn1"/>

        <Button android:id="@+id/btn2" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn2"/>

        <Button android:id="@+id/btn3" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3"/>

        <Button android:id="@+id/btn4" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn4"/>

        <Button android:id="@+id/btn5" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn5"/>

        <Button android:id="@+id/btn6" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn6"/>

        <Button android:id="@+id/btn7" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn7"/>

        <Button android:id="@+id/btn8" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn8"/>

        <Button android:id="@+id/btn9" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn9"/>

        <Button android:id="@+id/btn10" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn10"/>

        <Button android:id="@+id/btn11" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn11"/>

        <Button android:id="@+id/btn12" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn12"/>
    </LinearLayout>
</ScrollView>